Revert changes not specifically related to `Arrays.asList`
Signed-off-by: currantw <taylor.curran@improving.com>