@@ -13,6 +13,7 @@ import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -82,7 +83,9 @@ public class ExpressionAnalyzer extends AbstractNodeVisitor<Expression, Analysis
     final Expression expression = node.getExpression().accept(this, context);
     return (Expression)
         repository.compile(
-            context.getFunctionProperties(), node.convertFunctionName(), List.of(expression));
+            context.getFunctionProperties(),
+            node.convertFunctionName(),
+            Collections.singletonList(expression));
   }
 
   public ExpressionAnalyzer(BuiltinFunctionRepository repository) {
