@@ -6,6 +6,7 @@
 package org.opensearch.sql.analysis;
 
 import com.google.common.collect.ImmutableList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.regex.Pattern;
@@ -53,7 +54,7 @@ public class SelectExpressionAnalyzer
 
   @Override
   public List<NamedExpression> visitField(Field node, AnalysisContext context) {
-    return List.of(DSL.named(node.accept(expressionAnalyzer, context)));
+    return Collections.singletonList(DSL.named(node.accept(expressionAnalyzer, context)));
   }
 
   @Override
@@ -64,7 +65,8 @@ public class SelectExpressionAnalyzer
     }
 
     Expression expr = referenceIfSymbolDefined(node, context);
-    return List.of(DSL.named(unqualifiedNameIfFieldOnly(node, context), expr, node.getAlias()));
+    return Collections.singletonList(
+        DSL.named(unqualifiedNameIfFieldOnly(node, context), expr, node.getAlias()));
   }
 
   /**
