@@ -5,6 +5,7 @@
 
 package org.opensearch.sql.ast.expression;
 
+import java.util.Collections;
 import java.util.List;
 import lombok.EqualsAndHashCode;
 import lombok.Getter;
@@ -41,7 +42,7 @@ public class AggregateFunction extends UnresolvedExpression {
   public AggregateFunction(String funcName, UnresolvedExpression field) {
     this.funcName = funcName;
     this.field = field;
-    this.argList = List.of();
+    this.argList = Collections.emptyList();
   }
 
   /**
@@ -54,13 +55,13 @@ public class AggregateFunction extends UnresolvedExpression {
   public AggregateFunction(String funcName, UnresolvedExpression field, Boolean distinct) {
     this.funcName = funcName;
     this.field = field;
-    this.argList = List.of();
+    this.argList = Collections.emptyList();
     this.distinct = distinct;
   }
 
   @Override
   public List<UnresolvedExpression> getChild() {
-    return List.of(field);
+    return Collections.singletonList(field);
   }
 
   @Override
