@@ -5,6 +5,7 @@
 
 package org.opensearch.sql.storage.write;
 
+import java.util.Collections;
 import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.opensearch.sql.planner.physical.PhysicalPlan;
@@ -28,7 +29,7 @@ public abstract class TableWriteOperator extends PhysicalPlan {
 
   @Override
   public List<PhysicalPlan> getChild() {
-    return List.of(input);
+    return Collections.singletonList(input);
   }
 
   /**
