@@ -12,6 +12,7 @@ import static org.opensearch.sql.data.type.ExprCoreType.STRING;
 
 import com.google.common.collect.ImmutableMap;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -60,7 +61,7 @@ public class AnalyzerTestBase {
     return new StorageEngine() {
       @Override
       public Collection<FunctionResolver> getFunctions() {
-        return List.of(
+        return Collections.singletonList(
             new FunctionResolver() {
 
               @Override
