@@ -14,6 +14,7 @@ import static org.opensearch.sql.expression.DSL.named;
 import static org.opensearch.sql.expression.DSL.ref;
 
 import com.google.common.collect.ImmutableList;
+import java.util.Collections;
 import java.util.List;
 import org.junit.jupiter.api.DisplayNameGeneration;
 import org.junit.jupiter.api.DisplayNameGenerator;
@@ -37,7 +38,7 @@ class ExpressionNodeVisitorTest {
     assertNull(DSL.abs(literal(-10)).accept(visitor, null));
     assertNull(DSL.sum(literal(10)).accept(visitor, null));
     assertNull(
-        named("avg", new AvgAggregator(List.of(ref("age", INTEGER)), INTEGER))
+        named("avg", new AvgAggregator(Collections.singletonList(ref("age", INTEGER)), INTEGER))
             .accept(visitor, null));
     assertNull(new CaseClause(ImmutableList.of(), null).accept(visitor, null));
     assertNull(new WhenClause(literal("test"), literal(10)).accept(visitor, null));
