@@ -20,6 +20,7 @@ import static org.opensearch.sql.data.type.ExprCoreType.TIMESTAMP;
 
 import com.google.common.collect.ImmutableMap;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import org.junit.jupiter.api.Test;
 import org.opensearch.sql.data.model.ExprDateValue;
@@ -37,8 +38,9 @@ class AggregationOperatorTest extends PhysicalPlanTestBase {
     PhysicalPlan plan =
         new AggregationOperator(
             new TestScan(),
-            List.of(DSL.named("sum(response)", DSL.sum(DSL.ref("response", INTEGER)))),
-            List.of());
+            Collections.singletonList(
+                DSL.named("sum(response)", DSL.sum(DSL.ref("response", INTEGER)))),
+            Collections.emptyList());
     List<ExprValue> result = execute(plan);
     assertEquals(1, result.size());
     assertThat(
@@ -51,8 +53,9 @@ class AggregationOperatorTest extends PhysicalPlanTestBase {
     PhysicalPlan plan =
         new AggregationOperator(
             new TestScan(),
-            List.of(DSL.named("avg(response)", DSL.avg(DSL.ref("response", INTEGER)))),
-            List.of(DSL.named("action", DSL.ref("action", STRING))));
+            Collections.singletonList(
+                DSL.named("avg(response)", DSL.avg(DSL.ref("response", INTEGER)))),
+            Collections.singletonList(DSL.named("action", DSL.ref("action", STRING))));
     List<ExprValue> result = execute(plan);
     assertEquals(2, result.size());
     assertThat(
@@ -67,7 +70,8 @@ class AggregationOperatorTest extends PhysicalPlanTestBase {
     PhysicalPlan plan =
         new AggregationOperator(
             new TestScan(),
-            List.of(DSL.named("avg(response)", DSL.avg(DSL.ref("response", INTEGER)))),
+            Collections.singletonList(
+                DSL.named("avg(response)", DSL.avg(DSL.ref("response", INTEGER)))),
             Arrays.asList(
                 DSL.named("action", DSL.ref("action", STRING)),
                 DSL.named("ip", DSL.ref("ip", STRING))));
@@ -89,8 +93,9 @@ class AggregationOperatorTest extends PhysicalPlanTestBase {
     PhysicalPlan plan =
         new AggregationOperator(
             new TestScan(),
-            List.of(DSL.named("sum(response)", DSL.sum(DSL.ref("response", INTEGER)))),
-            List.of(DSL.named("action", DSL.ref("action", STRING))));
+            Collections.singletonList(
+                DSL.named("sum(response)", DSL.sum(DSL.ref("response", INTEGER)))),
+            Collections.singletonList(DSL.named("action", DSL.ref("action", STRING))));
     List<ExprValue> result = execute(plan);
     assertEquals(2, result.size());
     assertThat(
@@ -105,8 +110,8 @@ class AggregationOperatorTest extends PhysicalPlanTestBase {
     PhysicalPlan plan =
         new AggregationOperator(
             testScan(datetimeInputs),
-            List.of(DSL.named("count", DSL.count(DSL.ref("second", TIMESTAMP)))),
-            List.of(
+            Collections.singletonList(DSL.named("count", DSL.count(DSL.ref("second", TIMESTAMP)))),
+            Collections.singletonList(
                 DSL.named(
                     "span", DSL.span(DSL.ref("second", TIMESTAMP), DSL.literal(6 * 1000), "ms"))));
     List<ExprValue> result = execute(plan);
@@ -126,8 +131,8 @@ class AggregationOperatorTest extends PhysicalPlanTestBase {
     PhysicalPlan plan =
         new AggregationOperator(
             testScan(datetimeInputs),
-            List.of(DSL.named("count", DSL.count(DSL.ref("second", TIMESTAMP)))),
-            List.of(
+            Collections.singletonList(DSL.named("count", DSL.count(DSL.ref("second", TIMESTAMP)))),
+            Collections.singletonList(
                 DSL.named("span", DSL.span(DSL.ref("second", TIMESTAMP), DSL.literal(6), "s"))));
     List<ExprValue> result = execute(plan);
     assertEquals(2, result.size());
@@ -146,8 +151,8 @@ class AggregationOperatorTest extends PhysicalPlanTestBase {
     PhysicalPlan plan =
         new AggregationOperator(
             testScan(datetimeInputs),
-            List.of(DSL.named("count", DSL.count(DSL.ref("minute", TIMESTAMP)))),
-            List.of(
+            Collections.singletonList(DSL.named("count", DSL.count(DSL.ref("minute", TIMESTAMP)))),
+            Collections.singletonList(
                 DSL.named("span", DSL.span(DSL.ref("minute", TIMESTAMP), DSL.literal(5), "m"))));
     List<ExprValue> result = execute(plan);
     assertEquals(3, result.size());
@@ -165,8 +170,9 @@ class AggregationOperatorTest extends PhysicalPlanTestBase {
     plan =
         new AggregationOperator(
             testScan(datetimeInputs),
-            List.of(DSL.named("count", DSL.count(DSL.ref("hour", TIME)))),
-            List.of(DSL.named("span", DSL.span(DSL.ref("hour", TIME), DSL.literal(30), "m"))));
+            Collections.singletonList(DSL.named("count", DSL.count(DSL.ref("hour", TIME)))),
+            Collections.singletonList(
+                DSL.named("span", DSL.span(DSL.ref("hour", TIME), DSL.literal(30), "m"))));
     result = execute(plan);
     assertEquals(4, result.size());
     assertThat(
@@ -187,8 +193,9 @@ class AggregationOperatorTest extends PhysicalPlanTestBase {
     PhysicalPlan plan =
         new AggregationOperator(
             testScan(datetimeInputs),
-            List.of(DSL.named("count", DSL.count(DSL.ref("hour", TIME)))),
-            List.of(DSL.named("span", DSL.span(DSL.ref("hour", TIME), DSL.literal(1), "h"))));
+            Collections.singletonList(DSL.named("count", DSL.count(DSL.ref("hour", TIME)))),
+            Collections.singletonList(
+                DSL.named("span", DSL.span(DSL.ref("hour", TIME), DSL.literal(1), "h"))));
     List<ExprValue> result = execute(plan);
     assertEquals(3, result.size());
     assertThat(
@@ -207,8 +214,9 @@ class AggregationOperatorTest extends PhysicalPlanTestBase {
     PhysicalPlan plan =
         new AggregationOperator(
             testScan(dateInputs),
-            List.of(DSL.named("count(day)", DSL.count(DSL.ref("day", DATE)))),
-            List.of(DSL.named("span", DSL.span(DSL.ref("day", DATE), DSL.literal(1), "d"))));
+            Collections.singletonList(DSL.named("count(day)", DSL.count(DSL.ref("day", DATE)))),
+            Collections.singletonList(
+                DSL.named("span", DSL.span(DSL.ref("day", DATE), DSL.literal(1), "d"))));
     List<ExprValue> result = execute(plan);
     assertEquals(4, result.size());
     assertThat(
@@ -226,8 +234,9 @@ class AggregationOperatorTest extends PhysicalPlanTestBase {
     plan =
         new AggregationOperator(
             testScan(dateInputs),
-            List.of(DSL.named("count", DSL.count(DSL.ref("month", DATE)))),
-            List.of(DSL.named("span", DSL.span(DSL.ref("month", DATE), DSL.literal(30), "d"))));
+            Collections.singletonList(DSL.named("count", DSL.count(DSL.ref("month", DATE)))),
+            Collections.singletonList(
+                DSL.named("span", DSL.span(DSL.ref("month", DATE), DSL.literal(30), "d"))));
     result = execute(plan);
     assertEquals(3, result.size());
     assertThat(
@@ -246,8 +255,9 @@ class AggregationOperatorTest extends PhysicalPlanTestBase {
     PhysicalPlan plan =
         new AggregationOperator(
             testScan(dateInputs),
-            List.of(DSL.named("count", DSL.count(DSL.ref("month", DATE)))),
-            List.of(DSL.named("span", DSL.span(DSL.ref("month", DATE), DSL.literal(5), "w"))));
+            Collections.singletonList(DSL.named("count", DSL.count(DSL.ref("month", DATE)))),
+            Collections.singletonList(
+                DSL.named("span", DSL.span(DSL.ref("month", DATE), DSL.literal(5), "w"))));
     List<ExprValue> result = execute(plan);
     assertEquals(3, result.size());
     assertThat(
@@ -266,8 +276,9 @@ class AggregationOperatorTest extends PhysicalPlanTestBase {
     PhysicalPlan plan =
         new AggregationOperator(
             testScan(dateInputs),
-            List.of(DSL.named("count", DSL.count(DSL.ref("month", DATE)))),
-            List.of(DSL.named("span", DSL.span(DSL.ref("month", DATE), DSL.literal(1), "M"))));
+            Collections.singletonList(DSL.named("count", DSL.count(DSL.ref("month", DATE)))),
+            Collections.singletonList(
+                DSL.named("span", DSL.span(DSL.ref("month", DATE), DSL.literal(1), "M"))));
     List<ExprValue> result = execute(plan);
     assertEquals(3, result.size());
     assertThat(
@@ -283,8 +294,8 @@ class AggregationOperatorTest extends PhysicalPlanTestBase {
     plan =
         new AggregationOperator(
             testScan(dateInputs),
-            List.of(DSL.named("count", DSL.count(DSL.ref("quarter", TIMESTAMP)))),
-            List.of(
+            Collections.singletonList(DSL.named("count", DSL.count(DSL.ref("quarter", TIMESTAMP)))),
+            Collections.singletonList(
                 DSL.named("span", DSL.span(DSL.ref("quarter", TIMESTAMP), DSL.literal(2), "M"))));
     result = execute(plan);
     assertEquals(4, result.size());
@@ -304,8 +315,8 @@ class AggregationOperatorTest extends PhysicalPlanTestBase {
     plan =
         new AggregationOperator(
             testScan(dateInputs),
-            List.of(DSL.named("count", DSL.count(DSL.ref("year", TIMESTAMP)))),
-            List.of(
+            Collections.singletonList(DSL.named("count", DSL.count(DSL.ref("year", TIMESTAMP)))),
+            Collections.singletonList(
                 DSL.named(
                     "span", DSL.span(DSL.ref("year", TIMESTAMP), DSL.literal(10 * 12), "M"))));
     result = execute(plan);
@@ -327,8 +338,8 @@ class AggregationOperatorTest extends PhysicalPlanTestBase {
     PhysicalPlan plan =
         new AggregationOperator(
             testScan(dateInputs),
-            List.of(DSL.named("count", DSL.count(DSL.ref("quarter", TIMESTAMP)))),
-            List.of(
+            Collections.singletonList(DSL.named("count", DSL.count(DSL.ref("quarter", TIMESTAMP)))),
+            Collections.singletonList(
                 DSL.named("span", DSL.span(DSL.ref("quarter", TIMESTAMP), DSL.literal(2), "q"))));
     List<ExprValue> result = execute(plan);
     assertEquals(2, result.size());
@@ -344,8 +355,8 @@ class AggregationOperatorTest extends PhysicalPlanTestBase {
     plan =
         new AggregationOperator(
             testScan(dateInputs),
-            List.of(DSL.named("count", DSL.count(DSL.ref("year", TIMESTAMP)))),
-            List.of(
+            Collections.singletonList(DSL.named("count", DSL.count(DSL.ref("year", TIMESTAMP)))),
+            Collections.singletonList(
                 DSL.named("span", DSL.span(DSL.ref("year", TIMESTAMP), DSL.literal(10 * 4), "q"))));
     result = execute(plan);
     assertEquals(3, result.size());
@@ -366,8 +377,9 @@ class AggregationOperatorTest extends PhysicalPlanTestBase {
     PhysicalPlan plan =
         new AggregationOperator(
             testScan(dateInputs),
-            List.of(DSL.named("count", DSL.count(DSL.ref("year", TIMESTAMP)))),
-            List.of(DSL.named("span", DSL.span(DSL.ref("year", TIMESTAMP), DSL.literal(10), "y"))));
+            Collections.singletonList(DSL.named("count", DSL.count(DSL.ref("year", TIMESTAMP)))),
+            Collections.singletonList(
+                DSL.named("span", DSL.span(DSL.ref("year", TIMESTAMP), DSL.literal(10), "y"))));
     List<ExprValue> result = execute(plan);
     assertEquals(3, result.size());
     assertThat(
@@ -387,8 +399,9 @@ class AggregationOperatorTest extends PhysicalPlanTestBase {
     PhysicalPlan plan =
         new AggregationOperator(
             testScan(numericInputs),
-            List.of(DSL.named("count", DSL.count(DSL.ref("integer", INTEGER)))),
-            List.of(DSL.named("span", DSL.span(DSL.ref("integer", INTEGER), DSL.literal(1), ""))));
+            Collections.singletonList(DSL.named("count", DSL.count(DSL.ref("integer", INTEGER)))),
+            Collections.singletonList(
+                DSL.named("span", DSL.span(DSL.ref("integer", INTEGER), DSL.literal(1), ""))));
     List<ExprValue> result = execute(plan);
     assertEquals(3, result.size());
     assertThat(
@@ -401,8 +414,8 @@ class AggregationOperatorTest extends PhysicalPlanTestBase {
     plan =
         new AggregationOperator(
             testScan(numericInputs),
-            List.of(DSL.named("count", DSL.count(DSL.ref("integer", INTEGER)))),
-            List.of(
+            Collections.singletonList(DSL.named("count", DSL.count(DSL.ref("integer", INTEGER)))),
+            Collections.singletonList(
                 DSL.named("span", DSL.span(DSL.ref("integer", INTEGER), DSL.literal(1.5), ""))));
     result = execute(plan);
     assertEquals(3, result.size());
@@ -419,8 +432,9 @@ class AggregationOperatorTest extends PhysicalPlanTestBase {
     PhysicalPlan plan =
         new AggregationOperator(
             testScan(numericInputs),
-            List.of(DSL.named("count", DSL.count(DSL.ref("long", LONG)))),
-            List.of(DSL.named("span", DSL.span(DSL.ref("long", LONG), DSL.literal(1), ""))));
+            Collections.singletonList(DSL.named("count", DSL.count(DSL.ref("long", LONG)))),
+            Collections.singletonList(
+                DSL.named("span", DSL.span(DSL.ref("long", LONG), DSL.literal(1), ""))));
     List<ExprValue> result = execute(plan);
     assertEquals(3, result.size());
     assertThat(
@@ -433,8 +447,9 @@ class AggregationOperatorTest extends PhysicalPlanTestBase {
     plan =
         new AggregationOperator(
             testScan(numericInputs),
-            List.of(DSL.named("count", DSL.count(DSL.ref("long", LONG)))),
-            List.of(DSL.named("span", DSL.span(DSL.ref("long", LONG), DSL.literal(1.5), ""))));
+            Collections.singletonList(DSL.named("count", DSL.count(DSL.ref("long", LONG)))),
+            Collections.singletonList(
+                DSL.named("span", DSL.span(DSL.ref("long", LONG), DSL.literal(1.5), ""))));
     result = execute(plan);
     assertEquals(3, result.size());
     assertThat(
@@ -450,8 +465,9 @@ class AggregationOperatorTest extends PhysicalPlanTestBase {
     PhysicalPlan plan =
         new AggregationOperator(
             testScan(numericInputs),
-            List.of(DSL.named("count", DSL.count(DSL.ref("float", FLOAT)))),
-            List.of(DSL.named("span", DSL.span(DSL.ref("float", FLOAT), DSL.literal(1), ""))));
+            Collections.singletonList(DSL.named("count", DSL.count(DSL.ref("float", FLOAT)))),
+            Collections.singletonList(
+                DSL.named("span", DSL.span(DSL.ref("float", FLOAT), DSL.literal(1), ""))));
     List<ExprValue> result = execute(plan);
     assertEquals(3, result.size());
     assertThat(
@@ -464,8 +480,9 @@ class AggregationOperatorTest extends PhysicalPlanTestBase {
     plan =
         new AggregationOperator(
             testScan(numericInputs),
-            List.of(DSL.named("count", DSL.count(DSL.ref("float", FLOAT)))),
-            List.of(DSL.named("span", DSL.span(DSL.ref("float", FLOAT), DSL.literal(1.5), ""))));
+            Collections.singletonList(DSL.named("count", DSL.count(DSL.ref("float", FLOAT)))),
+            Collections.singletonList(
+                DSL.named("span", DSL.span(DSL.ref("float", FLOAT), DSL.literal(1.5), ""))));
     result = execute(plan);
     assertEquals(3, result.size());
     assertThat(
@@ -481,8 +498,9 @@ class AggregationOperatorTest extends PhysicalPlanTestBase {
     PhysicalPlan plan =
         new AggregationOperator(
             testScan(numericInputs),
-            List.of(DSL.named("count", DSL.count(DSL.ref("double", DOUBLE)))),
-            List.of(DSL.named("span", DSL.span(DSL.ref("double", DOUBLE), DSL.literal(1), ""))));
+            Collections.singletonList(DSL.named("count", DSL.count(DSL.ref("double", DOUBLE)))),
+            Collections.singletonList(
+                DSL.named("span", DSL.span(DSL.ref("double", DOUBLE), DSL.literal(1), ""))));
     List<ExprValue> result = execute(plan);
     assertEquals(3, result.size());
     assertThat(
@@ -495,8 +513,9 @@ class AggregationOperatorTest extends PhysicalPlanTestBase {
     plan =
         new AggregationOperator(
             testScan(numericInputs),
-            List.of(DSL.named("count", DSL.count(DSL.ref("double", DOUBLE)))),
-            List.of(DSL.named("span", DSL.span(DSL.ref("double", DOUBLE), DSL.literal(1.5), ""))));
+            Collections.singletonList(DSL.named("count", DSL.count(DSL.ref("double", DOUBLE)))),
+            Collections.singletonList(
+                DSL.named("span", DSL.span(DSL.ref("double", DOUBLE), DSL.literal(1.5), ""))));
     result = execute(plan);
     assertEquals(3, result.size());
     assertThat(
@@ -512,7 +531,7 @@ class AggregationOperatorTest extends PhysicalPlanTestBase {
     PhysicalPlan plan =
         new AggregationOperator(
             testScan(compoundInputs),
-            List.of(DSL.named("max", DSL.max(DSL.ref("errors", INTEGER)))),
+            Collections.singletonList(DSL.named("max", DSL.max(DSL.ref("errors", INTEGER)))),
             Arrays.asList(
                 DSL.named("span", DSL.span(DSL.ref("day", DATE), DSL.literal(1), "d")),
                 DSL.named("region", DSL.ref("region", STRING))));
@@ -537,7 +556,7 @@ class AggregationOperatorTest extends PhysicalPlanTestBase {
     plan =
         new AggregationOperator(
             testScan(compoundInputs),
-            List.of(DSL.named("max", DSL.max(DSL.ref("errors", INTEGER)))),
+            Collections.singletonList(DSL.named("max", DSL.max(DSL.ref("errors", INTEGER)))),
             Arrays.asList(
                 DSL.named("span", DSL.span(DSL.ref("day", DATE), DSL.literal(1), "d")),
                 DSL.named("region", DSL.ref("region", STRING)),
@@ -624,7 +643,7 @@ class AggregationOperatorTest extends PhysicalPlanTestBase {
     PhysicalPlan plan =
         new AggregationOperator(
             testScan(compoundInputs),
-            List.of(DSL.named("sum", DSL.sum(DSL.ref("errors", INTEGER)))),
+            Collections.singletonList(DSL.named("sum", DSL.sum(DSL.ref("errors", INTEGER)))),
             Arrays.asList(
                 DSL.named("host", DSL.ref("host", STRING)),
                 DSL.named("span", DSL.span(DSL.ref("day", DATE), DSL.literal(1), "d"))));
@@ -676,7 +695,7 @@ class AggregationOperatorTest extends PhysicalPlanTestBase {
     PhysicalPlan plan =
         new AggregationOperator(
             testScan(compoundInputs),
-            List.of(DSL.named("sum", DSL.sum(DSL.ref("errors", INTEGER)))),
+            Collections.singletonList(DSL.named("sum", DSL.sum(DSL.ref("errors", INTEGER)))),
             Arrays.asList(
                 DSL.named("host", DSL.ref("host", STRING)),
                 DSL.named("span", DSL.span(DSL.ref("day", DATE), DSL.literal(1), "d")),
@@ -736,8 +755,8 @@ class AggregationOperatorTest extends PhysicalPlanTestBase {
     AggregationOperator plan =
         new AggregationOperator(
             testScan(datetimeInputs),
-            List.of(DSL.named("count", DSL.count(DSL.ref("second", TIMESTAMP)))),
-            List.of(
+            Collections.singletonList(DSL.named("count", DSL.count(DSL.ref("second", TIMESTAMP)))),
+            Collections.singletonList(
                 DSL.named(
                     "span", DSL.span(DSL.ref("second", TIMESTAMP), DSL.literal(6 * 1000), "ms"))));
     AggregationOperator copy =
