@@ -5,6 +5,7 @@
 
 package org.opensearch.sql.legacy.executor.format;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import org.opensearch.client.Client;
@@ -26,14 +27,14 @@ public class DeleteResultSet extends ResultSet {
   }
 
   private List<Schema.Column> loadColumns() {
-    return List.of(new Schema.Column(DELETED, null, Schema.Type.LONG));
+    return Collections.singletonList(new Schema.Column(DELETED, null, Schema.Type.LONG));
   }
 
   private List<DataRows.Row> loadRows() {
-    return List.of(new DataRows.Row(loadDeletedData()));
+    return Collections.singletonList(new DataRows.Row(loadDeletedData()));
   }
 
   private Map<String, Object> loadDeletedData() {
-    return Map.of(DELETED, ((BulkByScrollResponse) queryResult).getDeleted());
+    return Collections.singletonMap(DELETED, ((BulkByScrollResponse) queryResult).getDeleted());
   }
 }
