@@ -10,6 +10,7 @@ import static org.opensearch.sql.utils.MLCommonsConstants.CENTROIDS;
 import static org.opensearch.sql.utils.MLCommonsConstants.DISTANCE_TYPE;
 import static org.opensearch.sql.utils.MLCommonsConstants.ITERATIONS;
 
+import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
@@ -90,7 +91,7 @@ public class MLCommonsOperator extends MLCommonsOperatorActions {
 
   @Override
   public List<PhysicalPlan> getChild() {
-    return List.of(input);
+    return Collections.singletonList(input);
   }
 
   protected MLAlgoParams convertArgumentToMLParameter(
