@@ -14,6 +14,7 @@
 package org.opensearch.sql.opensearch.response.agg;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import org.opensearch.search.aggregations.Aggregations;
@@ -33,6 +34,6 @@ public class NoBucketAggregationParser implements OpenSearchAggregationResponseP
 
   @Override
   public List<Map<String, Object>> parse(Aggregations aggregations) {
-    return List.of(metricsParser.parse(aggregations));
+    return Collections.singletonList(metricsParser.parse(aggregations));
   }
 }
