@@ -14,6 +14,7 @@ import static org.opensearch.search.sort.SortOrder.ASC;
 import static org.opensearch.sql.data.type.ExprCoreType.INTEGER;
 import static org.opensearch.sql.data.type.ExprCoreType.STRING;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -348,7 +349,7 @@ class OpenSearchRequestBuilderTest {
   void test_push_down_aggregation() {
     AggregationBuilder aggBuilder =
         AggregationBuilders.composite(
-            "composite_buckets", List.of(new TermsValuesSourceBuilder("longA")));
+            "composite_buckets", Collections.singletonList(new TermsValuesSourceBuilder("longA")));
     OpenSearchAggregationResponseParser responseParser =
         new CompositeAggregationParser(new SingleValueParser("AVG(intA)"));
     requestBuilder.pushDownAggregation(Pair.of(List.of(aggBuilder), responseParser));
@@ -367,7 +368,7 @@ class OpenSearchRequestBuilderTest {
   void test_push_down_percentile_aggregation() {
     AggregationBuilder aggBuilder =
         AggregationBuilders.composite(
-            "composite_buckets", List.of(new TermsValuesSourceBuilder("longA")));
+            "composite_buckets", Collections.singletonList(new TermsValuesSourceBuilder("longA")));
     OpenSearchAggregationResponseParser responseParser =
         new CompositeAggregationParser(new SinglePercentileParser("PERCENTILE(intA, 50)"));
     requestBuilder.pushDownAggregation(Pair.of(List.of(aggBuilder), responseParser));
